Fix broken styles again.

--- a/assets/artlist_layout.css
+++ b/assets/artlist_layout.css
@@ -1,12 +1,11 @@
 body.loading * { visibility: hidden; }
 
 body > header { position: fixed; top: 0; left: 0; right: 0; z-index: 1; }
+body > header nav > a { display: block; }
 
-body > header nav > a { display:block; }
+body       div.list.controls { position: absolute; }
+body.index div.list.controls { position: fixed; }
 
-
-
-/*div.controls div.rules {position: absolute;  border-bottom: 1px solid hsl(0, 0%, 33%); border-top: 1px solid hsl(0, 0%, 33%); }*/
 
 form.search { position: absolute; }
 form.search input { display: block; height: 30px; border: 0; padding: 0; }
@@ -22,8 +21,6 @@ section.day h2 { position: relative; border-top: 1px solid black; border-bottom:
 article { position: relative; overflow: hidden; border-top: 1px dotted black; border-bottom: 1px dotted black; }
 article div.title, article div.location, article div.cost, article div.time { white-space: nowrap; }
 article div.title a { text-decoration: none; }
-
-/*section.day article:hover { border-style: solid; }*/
 
 article div.title_category_and_location { position: absolute; left: 0; top: 0; }
 article div.title_category_and_location > div { display: inline-block; }
